@startuml

class Agencia {

        + registrar(Vehiculo)
        + alquiarDias(unaPatente, unosDias)
}

interface  Vehiculo {
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Auto {
        - modelo

        + patente(Patente)
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Camion {
        - pma

        + patente(Patente)
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Bus {
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Patente {
        - valor

        + equals(otraPatente)
}

Agencia o- "0..*" Vehiculo

Vehiculo <|.. Auto
Vehiculo <|.. Camion
Vehiculo <|.. Bus

Auto *- Patente
Camion *- Patente
Bus *- Patente

@enduml
